# zzw

./: .gitignore  README.md  _deploy_to_crawlab.py  _fix_xinhua2.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
scripts/: __init__.py
src/cjscript/: __init__.py  main.py
src/cjscript/config/: settings.py
src/cjscript/spiders/: __init__.py  sina.py  xinhua.py
tests/: __init__.py  test_main.py
